[gd_scene load_steps=10 format=3 uid="uid://ucjha6wqrgp0"]

[ext_resource type="Texture2D" uid="uid://bsrjffe3deapf" path="res://Menus/MenuBackground.PNG" id="1_gilrh"]
[ext_resource type="Script" path="res://Menus/OptionsMenuBehaviour.gd" id="1_jofio"]
[ext_resource type="Theme" uid="uid://citlvkejb3k1b" path="res://Menus/Theme.tres" id="3_3lonp"]
[ext_resource type="AudioStream" uid="uid://7853iuldx3m6" path="res://Menus/confirmation_004.ogg" id="4_ddi2b"]

[sub_resource type="SystemFont" id="SystemFont_es2ku"]
font_names = PackedStringArray("Monospace")
font_weight = 625

[sub_resource type="LabelSettings" id="LabelSettings_um32o"]
font = SubResource("SystemFont_es2ku")
font_size = 70

[sub_resource type="SystemFont" id="SystemFont_0v8t5"]
font_names = PackedStringArray("Monospace")

[sub_resource type="LabelSettings" id="LabelSettings_w102k"]
font = SubResource("SystemFont_0v8t5")
font_size = 50

[sub_resource type="SystemFont" id="SystemFont_ic3po"]
font_names = PackedStringArray("Monospace")

[node name="OptionsMenu" type="Control" node_paths=PackedStringArray("musicSlider", "sfxSlider", "fullscreenButton", "sampleSFXSound")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jofio")
musicSlider = NodePath("MarginContainer/VBoxContainer/GridContainer/HSlider")
sfxSlider = NodePath("MarginContainer/VBoxContainer/GridContainer2/HSlider")
fullscreenButton = NodePath("MarginContainer/VBoxContainer/GridContainer3/CheckButton")
sampleSFXSound = NodePath("SampleSFXSound")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gilrh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 400

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Sound" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sound"
label_settings = SubResource("LabelSettings_um32o")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Music"
label_settings = SubResource("LabelSettings_w102k")

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "SFX"
label_settings = SubResource("LabelSettings_w102k")

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Sound2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Graphics"
label_settings = SubResource("LabelSettings_um32o")

[node name="GridContainer3" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
columns = 2

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/GridContainer3"]
layout_mode = 2
theme = ExtResource("3_3lonp")
theme_override_font_sizes/font_size = 50
text = "Fullscreen"

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(250, 80)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.5
offset_top = -62.44
offset_right = 30.5
offset_bottom = -31.4399
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = SubResource("SystemFont_ic3po")
theme_override_font_sizes/font_size = 60
text = "Return"

[node name="SampleSFXSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ddi2b")
bus = &"SFX"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/HSlider" to="." method="onMusicSliderChange"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer2/HSlider" to="." method="onSFXSliderChange"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/GridContainer3/CheckButton" to="." method="onFullscreenToggled"]
[connection signal="pressed" from="Button" to="." method="returnToMenu"]
